# gmail-fetcher

./: Cargo.toml  README.md
src/: client.rs  error_imap.rs  input.rs  lib.rs  main.rs
