# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "imap_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rustls = "0.22"
tokio-rustls = "0.25"
webpki-roots = "0.26"
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
